# MediaFlow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mediaflow/: __init__.py  __main__.py  cli.py
mediaflow/clipper/: __init__.py  api.py  main.py  webui.py
mediaflow/clipper/caches/: config.yaml  transcribe_config.yaml
mediaflow/clipper/cores/: cut.py  daemon.py  transcriber.py  translator.py
mediaflow/common/: __init__.py  clipper_utils.py  logging.py  markdown.py  segments.py  yaml_parser.py
mediaflow/tts/: __init__.py  api.py  cli.py  infer.py  infer_v2.py
mediaflow/tts/BigVGAN/: ECAPA_TDNN.py  bigvgan.py  models.py
mediaflow/tts/BigVGAN/alias_free_activation/cuda/: activation1d.py
mediaflow/tts/accel/: gpt2_accel.py
mediaflow/tts/gpt/: _compat.py  conformer_encoder.py  model.py  model_v2.py
mediaflow/tts/s2mel/dac/model/: dac.py
mediaflow/tts/s2mel/dac/nn/: quantize.py
mediaflow/tts/s2mel/dac/utils/: __init__.py
mediaflow/tts/s2mel/modules/: commons.py  diffusion_transformer.py  flow_matching.py  length_regulator.py  wavenet.py
mediaflow/tts/s2mel/modules/campplus/: DTDNN.py
mediaflow/tts/utils/: arch_util.py  feature_extractors.py  front.py  maskgct_utils.py
mediaflow/tts/utils/maskgct/models/codec/amphion_codec/quantize/: __init__.py  residual_vq.py
mediaflow/tts/utils/maskgct/models/codec/kmeans/: repcodec_model.py
prompts/: AT-20260603_203828.m4a
tests/: __init__.py  test_api.py  test_cli.py  test_common.py  test_imports.py
