[project]
name = "mediaflow"
version = "0.2.0"
description = "Unified media processing toolkit: TTS/voice cloning + subtitle generation/editing/translation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "MediaFlow Contributors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
]

dependencies = [
  "transformers>=5.10.2,<6",
  "tokenizers>=0.22",
  "huggingface-hub>=0.25",
  "safetensors>=0.5",
  "torch>=2.9",
  "torchaudio>=2.9",
  "accelerate>=1.10",
  "modelscope>=1.27",
  "librosa>=0.10.2",
  "ffmpeg-python>=0.2.0",
  "soundfile>=0.12",
  "cn2an>=0.5.22",
  "WeTextProcessing; sys_platform == 'linux'",
  "wetext>=0.0.9; sys_platform != 'linux'",
  "g2p-en>=2.1.0",
  "jieba>=0.42.1",
  "numba>=0.60",
  "numpy>=2.0",
  "munch>=4.0.0",
  "openai-whisper",
  "srt>=3.5",
  "opencc-python-reimplemented",
  "pyyaml",
  "moviepy>=2.0",
  "opencv-python>=4.10",
  "einops>=0.8.1",
  "json5>=0.10.0",
  "matplotlib>=3.9",
  "omegaconf>=2.3.0",
  "pandas>=2.3",
  "sentencepiece>=0.2.1",
  "textstat>=0.7.10",
  "tqdm>=4.67",
  "gradio>=5.0",
  "requests",
]

[project.optional-dependencies]
translate = ["openai"]
deepspeed = ["deepspeed>=0.15"]
all = ["openai", "deepspeed>=0.15"]

[project.scripts]
mediaflow = "mediaflow.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mediaflow"]

[tool.hatch.build.targets.wheel.force-include]
"mediaflow/tts/BigVGAN" = "mediaflow/tts/BigVGAN"
"mediaflow/clipper/caches" = "mediaflow/clipper/caches"
"examples" = "mediaflow/examples"
"docs" = "mediaflow/docs"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
